<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/welcome_background_car_grayscale"
    android:id="@+id/user_register_fragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/opacity_layer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black_60_opacity"
            android:contentDescription="@null"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingStart="60dp"
            android:paddingEnd="60dp"
            android:paddingTop="200dp"
            app:startIconDrawable="@drawable/ic_baseline_person_24"
            app:startIconContentDescription="@string/first_name"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/test_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:paddingStart="60dp"
            android:paddingEnd="60dp"
            android:paddingTop="20dp"
            app:startIconDrawable="@drawable/ic_baseline_person_24"
            app:startIconContentDescription="@string/last_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/first_name"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/test_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:paddingStart="60dp"
            android:paddingEnd="60dp"
            android:paddingTop="20dp"
            app:startIconDrawable="@drawable/ic_baseline_mail_outline_24"
            app:startIconContentDescription="@string/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/last_name"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/test_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:paddingStart="60dp"
            android:paddingEnd="60dp"
            android:paddingTop="20dp"
            android:inputType="textPassword"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            app:startIconContentDescription="@string/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/test_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:backgroundTint="@color/indigo_500"
            android:layout_marginTop="10dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/create_an_account"
            android:textColor="@color/white_smoke"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/btnSpinner"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            style="?android:attr/progressBarStyleLarge"
            app:layout_constraintEnd_toEndOf="@id/btnRegister"
            app:layout_constraintTop_toTopOf="@id/btnRegister"
            app:layout_constraintBottom_toBottomOf="@id/btnRegister"
            android:translationZ="10dp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/register_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:text="@string/register_title"
            android:textColor="@color/white_smoke"
            android:shadowColor="@color/black"
            android:shadowDx="8"
            android:shadowDy="8"
            android:shadowRadius="8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="60dp"
            android:textSize="38sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/register_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_for_free"
            android:textColor="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_title"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp" />

        <LinearLayout
            android:id="@+id/horizontal_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnRegister">

            <TextView
                android:id="@+id/tvAccountExists"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:text="@string/sign_in_account_exists"
                android:textColor="@color/white_smoke"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/background_red_car"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:clickable="true"
                android:focusable="true"
                android:paddingBottom="20dp"
                android:text="@string/sign_in"
                android:textColor="@color/hyperlink"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/background_red_car"
                app:layout_constraintStart_toEndOf="@+id/tvAccountExists" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>